{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 419,
  "lineage": "a479143a-6c84-ea6a-7057-c3c42bf5733b",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:loadbalancer/app/mariam-public-alb-IaC/bf584dfbdcef6f85",
            "arn_suffix": "app/mariam-public-alb-IaC/bf584dfbdcef6f85",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "mariam-public-alb-IaC-2077106250.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:484907516017:loadbalancer/app/mariam-public-alb-IaC/bf584dfbdcef6f85",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "mariam-public-alb-IaC",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-00e3210aeb7dbd95a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c8ffad63ed1b6017"
              },
              {
                "subnet_id": "subnet-0f96c7bc5a708bdd6"
              }
            ],
            "subnets": [
              "subnet-0c8ffad63ed1b6017",
              "subnet-0f96c7bc5a708bdd6"
            ],
            "tags": {
              "Name": "mariam-public-alb-IaC"
            },
            "tags_all": {
              "Name": "mariam-public-alb-IaC"
            },
            "vpc_id": "vpc-0a532f46c1b61ccba",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:loadbalancer/app/mariam-public-alb-IaC/bf584dfbdcef6f85"
          },
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:listener/app/mariam-public-alb-IaC/bf584dfbdcef6f85/826a0821cbf90d72",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:targetgroup/mariam-fe-tg-IaC/dae6cba5a28ec8b5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:484907516017:listener/app/mariam-public-alb-IaC/bf584dfbdcef6f85/826a0821cbf90d72",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:loadbalancer/app/mariam-public-alb-IaC/bf584dfbdcef6f85",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:listener/app/mariam-public-alb-IaC/bf584dfbdcef6f85/826a0821cbf90d72"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.fe_tg",
            "module.sg.aws_security_group.sg",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:targetgroup/mariam-be-tg-IaC/9ede5da0e7d1667c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:listener-rule/app/mariam-public-alb-IaC/bf584dfbdcef6f85/826a0821cbf90d72/2c4054dae74913da",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:484907516017:listener-rule/app/mariam-public-alb-IaC/bf584dfbdcef6f85/826a0821cbf90d72/2c4054dae74913da",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:listener/app/mariam-public-alb-IaC/bf584dfbdcef6f85/826a0821cbf90d72",
            "priority": 10,
            "region": "us-east-1",
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:listener-rule/app/mariam-public-alb-IaC/bf584dfbdcef6f85/826a0821cbf90d72/2c4054dae74913da"
          },
          "dependencies": [
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_listener.http",
            "module.alb.aws_lb_target_group.be_tg",
            "module.alb.aws_lb_target_group.fe_tg",
            "module.sg.aws_security_group.sg",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "be_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:targetgroup/mariam-be-tg-IaC/9ede5da0e7d1667c",
            "arn_suffix": "targetgroup/mariam-be-tg-IaC/9ede5da0e7d1667c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:484907516017:targetgroup/mariam-be-tg-IaC/9ede5da0e7d1667c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:484907516017:loadbalancer/app/mariam-public-alb-IaC/bf584dfbdcef6f85"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mariam-be-tg-IaC",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:targetgroup/mariam-be-tg-IaC/9ede5da0e7d1667c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "fe_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:targetgroup/mariam-fe-tg-IaC/dae6cba5a28ec8b5",
            "arn_suffix": "targetgroup/mariam-fe-tg-IaC/dae6cba5a28ec8b5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:484907516017:targetgroup/mariam-fe-tg-IaC/dae6cba5a28ec8b5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:484907516017:loadbalancer/app/mariam-public-alb-IaC/bf584dfbdcef6f85"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "mariam-fe-tg-IaC",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:484907516017:targetgroup/mariam-fe-tg-IaC/dae6cba5a28ec8b5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:internet-gateway/igw-04c9118efac479123",
            "id": "igw-04c9118efac479123",
            "owner_id": "484907516017",
            "region": "us-east-1",
            "tags": {
              "Name": "mariam-igw-IaC"
            },
            "tags_all": {
              "Name": "mariam-igw-IaC"
            },
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef5c99205fb4fe0f",
            "arn": "arn:aws:ec2:us-east-1:484907516017:elastic-ip/eipalloc-0ef5c99205fb4fe0f",
            "association_id": "eipassoc-0e6ab758c7ecf0de2",
            "domain": "vpc",
            "id": "eipalloc-0ef5c99205fb4fe0f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0542be202032b31e7",
            "private_dns": "ip-10-0-1-155.ec2.internal",
            "private_ip": "10.0.1.155",
            "public_dns": "ec2-13-216-47-110.compute-1.amazonaws.com",
            "public_ip": "13.216.47.110",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "mariam-eip-us-east-1a-IaC"
            },
            "tags_all": {
              "Name": "mariam-eip-us-east-1a-IaC"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037adc6ee9cb9654b",
            "arn": "arn:aws:ec2:us-east-1:484907516017:elastic-ip/eipalloc-037adc6ee9cb9654b",
            "association_id": "eipassoc-0abf7d4a43723d312",
            "domain": "vpc",
            "id": "eipalloc-037adc6ee9cb9654b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01ea15a57d36917ad",
            "private_dns": "ip-10-0-2-132.ec2.internal",
            "private_ip": "10.0.2.132",
            "public_dns": "ec2-52-207-131-1.compute-1.amazonaws.com",
            "public_ip": "52.207.131.1",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "mariam-eip-us-east-1b-IaC"
            },
            "tags_all": {
              "Name": "mariam-eip-us-east-1b-IaC"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef5c99205fb4fe0f",
            "association_id": "eipassoc-0e6ab758c7ecf0de2",
            "connectivity_type": "public",
            "id": "nat-0b5321aaf11248f88",
            "network_interface_id": "eni-0542be202032b31e7",
            "private_ip": "10.0.1.155",
            "public_ip": "13.216.47.110",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0c8ffad63ed1b6017",
            "tags": {
              "Name": "mariam-nat-us-east-1a-IaC"
            },
            "tags_all": {
              "Name": "mariam-nat-us-east-1a-IaC"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-037adc6ee9cb9654b",
            "association_id": "eipassoc-0abf7d4a43723d312",
            "connectivity_type": "public",
            "id": "nat-03f3a316e9d2dd228",
            "network_interface_id": "eni-01ea15a57d36917ad",
            "private_ip": "10.0.2.132",
            "public_ip": "52.207.131.1",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f96c7bc5a708bdd6",
            "tags": {
              "Name": "mariam-nat-us-east-1b-IaC"
            },
            "tags_all": {
              "Name": "mariam-nat-us-east-1b-IaC"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07fc6579b4f5a0f221080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b5321aaf11248f88",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-07fc6579b4f5a0f22",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat",
            "module.route_tables.aws_route_table.private_rt_nat",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ae5f2395f47294e81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-03f3a316e9d2dd228",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0ae5f2395f47294e8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.nat",
            "module.route_tables.aws_route_table.private_rt_nat",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:route-table/rtb-07fc6579b4f5a0f22",
            "id": "rtb-07fc6579b4f5a0f22",
            "owner_id": "484907516017",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b5321aaf11248f88",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mariam-private-rt-us-east-1a-IaC"
            },
            "tags_all": {
              "Name": "mariam-private-rt-us-east-1a-IaC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:route-table/rtb-0ae5f2395f47294e8",
            "id": "rtb-0ae5f2395f47294e8",
            "owner_id": "484907516017",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03f3a316e9d2dd228",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mariam-private-rt-us-east-1b-IaC"
            },
            "tags_all": {
              "Name": "mariam-private-rt-us-east-1b-IaC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:route-table/rtb-0cc3ef590bbe26446",
            "id": "rtb-0cc3ef590bbe26446",
            "owner_id": "484907516017",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c9118efac479123",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mariam-pub-rt-IaC"
            },
            "tags_all": {
              "Name": "mariam-pub-rt-IaC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_be_nat_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ecdccd66fb9f13e",
            "region": "us-east-1",
            "route_table_id": "rtb-07fc6579b4f5a0f22",
            "subnet_id": "subnet-082ca8d172401961a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt_nat",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0481705a9d4c9b9bf",
            "region": "us-east-1",
            "route_table_id": "rtb-0ae5f2395f47294e8",
            "subnet_id": "subnet-0b3b99ae42959fd86"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt_nat",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_fe_nat_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f4a1d794714f6d1",
            "region": "us-east-1",
            "route_table_id": "rtb-07fc6579b4f5a0f22",
            "subnet_id": "subnet-062bb44675e1e9355"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt_nat",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ede2754661d7ebc",
            "region": "us-east-1",
            "route_table_id": "rtb-0ae5f2395f47294e8",
            "subnet_id": "subnet-0ddbe07a005dd277c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.route_tables.aws_route_table.private_rt_nat",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.route_tables",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet-0c8ffad63ed1b6017",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025c574dfd0557321",
            "region": "us-east-1",
            "route_table_id": "rtb-0cc3ef590bbe26446",
            "subnet_id": "subnet-0c8ffad63ed1b6017"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.route_tables.aws_route_table.public_rt",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "subnet-0f96c7bc5a708bdd6",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c9198dd802fd68a",
            "region": "us-east-1",
            "route_table_id": "rtb-0cc3ef590bbe26446",
            "subnet_id": "subnet-0f96c7bc5a708bdd6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.igw.aws_internet_gateway.gw",
            "module.route_tables.aws_route_table.public_rt",
            "module.subnets.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mariam-alb_sg-IaC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:security-group/sg-00e3210aeb7dbd95a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00e3210aeb7dbd95a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mariam-alb_sg-IaC",
            "name_prefix": "",
            "owner_id": "484907516017",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mariam-alb_sg-IaC"
            },
            "tags_all": {
              "Name": "mariam-alb_sg-IaC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "484907516017",
            "id": "sg-00e3210aeb7dbd95a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "mariam-be_sg-IaC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:security-group/sg-00a902cbe3a3e3047",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00a902cbe3a3e3047",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0401e0507f8e0a4ae"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "mariam-be_sg-IaC",
            "name_prefix": "",
            "owner_id": "484907516017",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mariam-be_sg-IaC"
            },
            "tags_all": {
              "Name": "mariam-be_sg-IaC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "484907516017",
            "id": "sg-00a902cbe3a3e3047",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "mariam-db_sg-IaC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:security-group/sg-032f332a968f47929",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-032f332a968f47929",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00a902cbe3a3e3047"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "mariam-db_sg-IaC",
            "name_prefix": "",
            "owner_id": "484907516017",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mariam-db_sg-IaC"
            },
            "tags_all": {
              "Name": "mariam-db_sg-IaC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "484907516017",
            "id": "sg-032f332a968f47929",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "mariam-fe_sg-IaC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:security-group/sg-0401e0507f8e0a4ae",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0401e0507f8e0a4ae",
            "ingress": [
              {
                "cidr_blocks": [
                  "41.35.193.91/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e3210aeb7dbd95a"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00e3210aeb7dbd95a"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "mariam-fe_sg-IaC",
            "name_prefix": "",
            "owner_id": "484907516017",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mariam-fe_sg-IaC"
            },
            "tags_all": {
              "Name": "mariam-fe_sg-IaC"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "484907516017",
            "id": "sg-0401e0507f8e0a4ae",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1052369693",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-00e3210aeb7dbd95a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_https_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1244109873",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-00e3210aeb7dbd95a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mariam-alb_sg-IaC",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1946933520",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-00e3210aeb7dbd95a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "mariam-be_sg-IaC",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3268182222",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-00a902cbe3a3e3047",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "mariam-db_sg-IaC",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-610571052",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-032f332a968f47929",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "mariam-fe_sg-IaC",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1035697720",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0401e0507f8e0a4ae",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "be_app_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 8080,
            "id": "sgrule-4178564870",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-00a902cbe3a3e3047",
            "security_group_rule_id": "sgr-0de3494e8396787ff",
            "self": false,
            "source_security_group_id": "sg-0401e0507f8e0a4ae",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "db_mysql_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3004715624",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-032f332a968f47929",
            "security_group_rule_id": "sgr-0a1864b9d4b1227af",
            "self": false,
            "source_security_group_id": "sg-00a902cbe3a3e3047",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fe_http_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-1290954880",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0401e0507f8e0a4ae",
            "security_group_rule_id": "sgr-0041c7d18bfd0c0bf",
            "self": false,
            "source_security_group_id": "sg-00e3210aeb7dbd95a",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fe_https_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-1106831935",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0401e0507f8e0a4ae",
            "security_group_rule_id": "sgr-04f6c60c805a7d3fb",
            "self": false,
            "source_security_group_id": "sg-00e3210aeb7dbd95a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "fe_ssh_in",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "41.35.193.91/32"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-529045351",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0401e0507f8e0a4ae",
            "security_group_rule_id": "sgr-0f72474fd6924e540",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.sg.aws_security_group.sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mariam-pri-1-IaC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:subnet/subnet-082ca8d172401961a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082ca8d172401961a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484907516017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mariam-pri-1-IaC"
            },
            "tags_all": {
              "Name": "mariam-pri-1-IaC"
            },
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "mariam-pri-2-IaC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:subnet/subnet-0ddbe07a005dd277c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddbe07a005dd277c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484907516017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mariam-pri-2-IaC"
            },
            "tags_all": {
              "Name": "mariam-pri-2-IaC"
            },
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "mariam-pri-3-IaC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:subnet/subnet-0a81671d43177440a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a81671d43177440a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484907516017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mariam-pri-3-IaC"
            },
            "tags_all": {
              "Name": "mariam-pri-3-IaC"
            },
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "mariam-pri-4-IaC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:subnet/subnet-0b3b99ae42959fd86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b3b99ae42959fd86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484907516017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mariam-pri-4-IaC"
            },
            "tags_all": {
              "Name": "mariam-pri-4-IaC"
            },
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "mariam-pri-5-IaC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:subnet/subnet-062bb44675e1e9355",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062bb44675e1e9355",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484907516017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mariam-pri-5-IaC"
            },
            "tags_all": {
              "Name": "mariam-pri-5-IaC"
            },
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "mariam-pri-6-IaC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:subnet/subnet-06667d15f25fe1ab1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06667d15f25fe1ab1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484907516017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mariam-pri-6-IaC"
            },
            "tags_all": {
              "Name": "mariam-pri-6-IaC"
            },
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "mariam-pub-1-IaC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:subnet/subnet-0c8ffad63ed1b6017",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8ffad63ed1b6017",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "484907516017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mariam-pub-1-IaC"
            },
            "tags_all": {
              "Name": "mariam-pub-1-IaC"
            },
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": "mariam-pub-2-IaC",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:subnet/subnet-0f96c7bc5a708bdd6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f96c7bc5a708bdd6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "484907516017",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "mariam-pub-2-IaC"
            },
            "tags_all": {
              "Name": "mariam-pub-2-IaC"
            },
            "vpc_id": "vpc-0a532f46c1b61ccba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484907516017:vpc/vpc-0a532f46c1b61ccba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0056ec77ae9ea317b",
            "default_route_table_id": "rtb-090cc4682a9f47a8a",
            "default_security_group_id": "sg-09fb4dcca00413439",
            "dhcp_options_id": "dopt-0fb318db6a86f8dfb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a532f46c1b61ccba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-090cc4682a9f47a8a",
            "owner_id": "484907516017",
            "region": "us-east-1",
            "tags": {
              "Name": "mariam-vpc-IaC"
            },
            "tags_all": {
              "Name": "mariam-vpc-IaC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}